connect and disconnect event handler

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,10 @@
     </header>
     <body>
         <h1> Root Page </h1>
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+        </script>
     </body>
 </html>
