add socket for message

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,6 @@
         <h1> Root Page </h1>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-        </script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
