--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
     <body>
         <h1> Root Page </h1>
 
+        <ol id="messages"></ol>
+
+        <form id='message-form'>
+            <input name='message' type='text' placeholder="Type your message"/>
+            <button> Send </button>
+        </form>
+
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
