--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 
 <html>
-    <header>
-        <meta charset="utf-8"/>
-    </header>
-    <body>
-        <h1> Root Page </h1>
 
-        <ol id="messages"></ol>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
 
-        <form id='message-form'>
-            <input name='message' type='text' placeholder="Type your message"/>
-            <button> Send </button>
-        </form>
-        <button id="send-location"> Send Location </button>
+<body class="chat">
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/libs/jquery-3.3.1.min.js"></script>
-        <script src="/js/index.js"></script>
-    </body>
+  <div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+  </div>
+
+  <div class="chat__main">
+    <ol id="messages" class="chat__messages"></ol>
+
+    <div class="chat__footer">
+      <form id="message-form">
+        <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+        <button>Send</button>
+      </form>
+      <button id="send-location">Send location</button>
+    </div>
+  </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/libs/jquery-3.3.1.min.js"></script>
+  <script src="/js/index.js"></script>
+</body>
+
 </html>
