--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,35 @@
     </div>
   </div>
 
+  <script id="message-template" type="text/template">
+      <li id="message">
+          <div class="message__title">
+              <h4>{{from}}</h4>
+              <span>{{createdAt}}</span>
+          </div>
+          <div class="message__body">
+              <p>{{text}}</p>
+          </div>
+      </li>
+  </script>
+
+  <script id="location-message-template" type="text/template">
+      <li id="message">
+          <div class="message__title">
+              <h4>{{from}}</h4>
+              <span>{{createdAt}}</span>
+          </div>
+          <div class="message__body">
+              <p>
+                  <a href="{{url}}" target="_blank"> My current location </a>
+              </p>
+          </div>
+      </li>
+  </script>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/libs/jquery-3.3.1.min.js"></script>
+  <script src="/js/libs/mustache.js"></script>
   <script src="/js/index.js"></script>
 </body>
 
